Fix Contentful logo attribution on FireFox browswers

--- a/src/stylesheets/objects/_footer.scss
+++ b/src/stylesheets/objects/_footer.scss
@@ -98,7 +98,6 @@
   display: inline-block;
   margin: 0 1rem 0 0;
   img {
-    width: 100%;
-    max-width: 85px;
+    width: 85px;
   }
 }
